# icml18-jtnn

./: .gitignore  pyproject.toml
bo/: gen_latent.py  sparse_gp.py
fast_molvae/: preprocess.py  sample.py  vae_train.py
jtnn/: jtnn_vae.py
jtnn_py37/: jtnn_vae.py  mol_tree.py
jtvae/: __init__.py  chemutils.py  datautils.py  jtmpn.py  jtnn_dec.py  jtnn_enc.py  jtnn_vae.py  mol_tree.py  mpn.py  nnutils.py  vocab.py
molopt/: optimize.py  pretrain.py  vaetrain.py
molvae/: draw_nei.py  pretrain.py  reconstruct.py  sample.py  vaetrain.py
