[build-system]
requires = ["setuptools>=59.0", "numpy>=1.21.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jtvae"
version = "0.1.0"
description = "Junction Tree Variational Autoencoder for Molecular Graph Generation"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "numpy",
    "rdkit",
    "torch"
]
authors = [
    {name = "Wengong Jin ", email = "wengong@csail.mit.edu"}
]
maintainers = [
  {name = "Truman Xu", email = "ziqiaoxu@umich.edu"}
]

classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Cheminformatics :: Molecular Graph Generation",

    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: MIT License",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/Truman-Xu/jtvae/"

[tool.setuptools.packages.find]
where = ["./"]
exclude = [
    "src", 
    "__pycache__", 
    ".ipynb_checkpoints", 
    "*.egg-info", 
    "tests"
]
namespaces = false